# adafruit-nrf52-template

./: .gitignore  Cargo.toml  Makefile.toml  README.md  memory.x
.cargo/: config.toml
src/: main.rs
