[package]
name = "adafruit-nrf52-template"
version = "0.1.0"
edition = "2021"


[dependencies]
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }

defmt = "0.3.5"
defmt-rtt = "0.4.0"
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-probe = "0.3.1"


[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy"}
embassy-executor = { git = "https://github.com/embassy-rs/embassy"}
embassy-nrf = { git = "https://github.com/embassy-rs/embassy"}


[profile.release]
debug = 2
